tests/forester-regre/test-p0119.err
cl_fa.cc:150: error: garbage detected [internal location]
